# Autopatrol_navigation

./: .gitignore
chap7_ws/src/: README.md
chap7_ws/src/autopatrol_interfaces/: package.xml
chap7_ws/src/autopatrol_robot/: package.xml  setup.py
chap7_ws/src/autopatrol_robot/autopatrol_robot/: patrol_node.py  speaker.py
chap7_ws/src/autopatrol_robot/config/: patrol_config.yaml
chap7_ws/src/autopatrol_robot/launch/: autopatrol.launch.py
chap7_ws/src/heshibot_application/: package.xml  setup.cfg  setup.py
chap7_ws/src/heshibot_application/heshibot_application/: init_robot_pose.py  nav_to_pose.py  waypoint_follower.py
chap7_ws/src/heshibot_description/: CMakeLists.txt  package.xml
chap7_ws/src/heshibot_description/config/: display_heshibot_model.rviz  display_heshibot_model_inertia.rviz  display_robot_model.rviz  display_robot_model_xacro.rviz  heshibot_ros2_controller.yaml
chap7_ws/src/heshibot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
chap7_ws/src/heshibot_description/urdf/: first_robot.urdf  first_robot.xacro
chap7_ws/src/heshibot_description/urdf/heshibot/: base.urdf.xacro  common_inertia.xacro  heshibot.ros2_control.xacro  heshibot.urdf.xacro
chap7_ws/src/heshibot_description/urdf/heshibot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
chap7_ws/src/heshibot_description/urdf/heshibot/sensor/: camera.urdf.xacro  imu.urdf.xacro  (+1 more)
chap7_ws/src/heshibot_navigation2/: CMakeLists.txt  package.xml
chap7_ws/src/heshibot_navigation2/config/: nav2_params.yaml
chap7_ws/src/heshibot_navigation2/launch/: navigation2.launch.py
